Profile still not done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,7 +103,7 @@
                     android:backgroundTint="?android:attr/panelBackground"
                     android:contentDescription="Report @string/dummy_button"
                     android:cropToPadding="true"
-                    android:onClick="onClickStatus"
+                    android:onClick="onClickReport"
                     android:scaleType="fitCenter"
                     android:visibility="visible"
                     app:srcCompat="@drawable/report"
