--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,9 +17,21 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitXY"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/backgrounddoodle" />
+
+            <ImageView
                 android:id="@+id/imageView5"
-                android:layout_width="337dp"
-                android:layout_height="618dp"
+                android:layout_width="273dp"
+                android:layout_height="472dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -28,8 +40,8 @@
                 app:srcCompat="@android:color/white" />
 
             <LinearLayout
-                android:layout_width="327dp"
-                android:layout_height="598dp"
+                android:layout_width="257dp"
+                android:layout_height="457dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
