--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -16,9 +16,21 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/backgrounddoodle" />
+
+        <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="308dp"
-            android:layout_height="500dp"
+            android:layout_width="285dp"
+            android:layout_height="477dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -27,8 +39,8 @@
             app:srcCompat="@android:color/white" />
 
         <LinearLayout
-            android:layout_width="312dp"
-            android:layout_height="495dp"
+            android:layout_width="262dp"
+            android:layout_height="445dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
