--- a/app/src/main/res/layout/activity_status.xml
+++ b/app/src/main/res/layout/activity_status.xml
@@ -75,7 +75,7 @@
                 <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/Piechart"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="300dp">
 
                 </com.github.mikephil.charting.charts.PieChart>
 
