--- a/app/src/main/res/layout/activity_confirm.xml
+++ b/app/src/main/res/layout/activity_confirm.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    tools:context="archfx.com.epidermicare.ConfirmActivity">
+    tools:context="archfx.com.epidermicare.activity.ConfirmActivity">
 
 
     <FrameLayout
