--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="archfx.com.epidermicare.Login">
+    tools:context="archfx.com.epidermicare.activity.Login">
 
     <!-- Login progress -->
     <android.support.constraint.ConstraintLayout
