--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -61,7 +61,7 @@
                 <ImageView
                     android:id="@+id/imageView4"
                     android:layout_width="match_parent"
-                    android:layout_height="176dp"
+                    android:layout_height="wrap_content"
                     app:srcCompat="@drawable/face" />
 
                 <TextView
