--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,9 +11,9 @@
 <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
 <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
 <!--android:paddingTop="@dimen/activity_vertical_margin"-->
-<!--tools:context="archfx.com.epidermicare.activity.Login">-->
+<!--tools:contearchfx.com.epidermicare.activity.LoginActivityActivityogin">-->
 
-<!--&lt;!&ndash; Login progress &ndash;&gt;-->
+<!--&lt;!&ndaLoginActivityogin progress &ndash;&gt;-->
 <!--<android.support.constraint.ConstraintLayout-->
 <!--android:layout_width="match_parent"-->
 <!--android:layout_height="match_parent">-->
