--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -41,6 +41,7 @@
         <LinearLayout
             android:layout_width="262dp"
             android:layout_height="445dp"
+            android:gravity="top|center_horizontal"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
