--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,27 +28,28 @@ app:layout_constraintStart_toStartOf="parent"
 app:layout_constraintTop_toTopOf="parent"
 app:srcCompat="@drawable/backgroundimage" />
 
-<ImageView
-android:id="@+id/imageView7"
-android:layout_width="349dp"
-android:layout_height="310dp"
-app:layout_constraintBottom_toBottomOf="parent"
-app:layout_constraintEnd_toEndOf="parent"
-app:layout_constraintHorizontal_bias="0.476"
-app:layout_constraintLeft_toLeftOf="parent"
-app:layout_constraintRight_toRightOf="parent"
-app:layout_constraintStart_toStartOf="parent"
-app:layout_constraintTop_toTopOf="parent"
-app:layout_constraintVertical_bias="0.556"
-app:srcCompat="@android:color/white" />
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="349dp"
+        android:layout_height="334dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.429"
+        app:srcCompat="@android:color/white" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/Titlelogin"
         android:layout_width="219dp"
         android:layout_height="36dp"
         android:fontFamily="sans-serif"
         android:text="EpidemiCare App"
         android:textAlignment="center"
+        android:textColor="@color/bg_register"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/email_login_form"
@@ -58,81 +59,80 @@ app:srcCompat="@android:color/white" />
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-<LinearLayout
-android:id="@+id/email_login_form"
-android:layout_width="243dp"
-android:layout_height="300dp"
-android:gravity="center"
-android:orientation="vertical"
-app:layout_constraintBottom_toBottomOf="parent"
-app:layout_constraintEnd_toEndOf="parent"
-app:layout_constraintHorizontal_bias="0.505"
-app:layout_constraintLeft_toLeftOf="parent"
-app:layout_constraintRight_toRightOf="parent"
-app:layout_constraintStart_toStartOf="parent"
-app:layout_constraintTop_toTopOf="parent"
-app:layout_constraintVertical_bias="0.66">
+    <LinearLayout
+        android:id="@+id/email_login_form"
+        android:layout_width="233dp"
+        android:layout_height="271dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-<ImageView
-android:id="@+id/imageView11"
-android:layout_width="match_parent"
-android:layout_height="79dp"
-app:srcCompat="@drawable/splash"
-tools:layout_editor_absoluteX="120dp" />
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="match_parent"
+            android:layout_height="79dp"
+            app:srcCompat="@drawable/splash"
+            tools:layout_editor_absoluteX="120dp" />
 
-<android.support.design.widget.TextInputLayout
-android:layout_width="match_parent"
-android:layout_height="wrap_content">
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-<AutoCompleteTextView
-android:id="@+id/email"
-android:layout_width="match_parent"
-android:layout_height="42dp"
-android:hint="@string/prompt_email"
-android:inputType="textEmailAddress"
-android:maxLines="1"
-android:singleLine="true" />
+            <AutoCompleteTextView
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                android:hint="@string/prompt_email"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:singleLine="true" />
 
-</android.support.design.widget.TextInputLayout>
+        </android.support.design.widget.TextInputLayout>
 
-<android.support.design.widget.TextInputLayout
-android:layout_width="match_parent"
-android:layout_height="wrap_content">
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-<EditText
-android:id="@+id/password"
-android:layout_width="match_parent"
-android:layout_height="42dp"
-android:hint="@string/prompt_password"
-android:imeActionId="6"
-android:imeActionLabel="@string/action_sign_in_short"
-android:imeOptions="actionUnspecified"
-android:inputType="textPassword"
-android:maxLines="1"
-android:singleLine="true" />
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                android:hint="@string/prompt_password"
+                android:imeActionId="6"
+                android:imeActionLabel="@string/action_sign_in_short"
+                android:imeOptions="actionUnspecified"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:singleLine="true" />
 
-</android.support.design.widget.TextInputLayout>
+        </android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:id="@+id/btnLogin"
-        style="?android:textAppearanceSmall"
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="sans-serif"
-        android:text="Sign In"
-        android:textColor="@color/bg_register"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/btnLogin"
+            style="?android:textAppearanceSmall"
+            android:layout_width="match_parent"
+            android:layout_height="41dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif"
+            android:text="Sign In"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/btnLinkToRegisterScreen"
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:fontFamily="sans-serif"
-        android:text="Sign Up"
-        android:textColor="@color/bg_register" />
+        <Button
+            android:id="@+id/btnLinkToRegisterScreen"
+            android:layout_width="match_parent"
+            android:layout_height="41dp"
+            android:fontFamily="sans-serif"
+            android:text="Sign Up"
+            android:textColor="@color/colorPrimary" />
 
-</LinearLayout>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
 
 <ProgressBar
