--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -91,7 +91,7 @@
                 android:text="Area" />
 
             <EditText
-                android:id="@+id/editText5"
+                android:id="@+id/date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
